--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/*Navbar*/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.pizzaheader {
+  
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .nav-container {
+    background-color:darkcyan;
+    display: flex;
+    justify-content: space-between;
+    color: aliceblue;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+  }
+  
+  .subnav-container {
+    background-image: url("./assets/img/imagennav.png");
+    background-size: cover;
+    padding: 35px;
+    text-align: center;
+    color: aliceblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  
+  .lista {
+    list-style-type: '🍕';
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    
+  }
+  
