--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,66 @@
     text-align: left;
     
   }
+
+  /*ItemCount*/
+
+  .counter {
+    width: fit-content;
+    background-color: gold;
+    margin: auto;
+    padding: 1rem;
+    text-align: center;
+  }
   
+  /*Item*/
+
+  .unapizza {
+    display: block;
+    width: 300px;
+  }
+
+  .unapizza img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+/*ItemDetail*/
+
+.detail-container {
+  width: 98%;
+  margin: auto;
+}
+
+@media screen and (min-width:768px) {
+  .detail-container{
+    width: 70%;
+  }
+}
+
+.detail-info {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.detail-img {
+  width: 100%;
+}
+
+.detail-content {
+  width: 100%;
+}
+
+@media screen and (min-width:768px) {
+  .detail-img {
+    width: 50%;
+  }
+  .detail-content {
+    padding-left: 3rem;
+    width: 50%;
+  }
+}
+
