--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,19 @@
   }
 }
 
+/*itemCart*/
+
+.itemCart {
+  display: flex;
+  border-bottom: 1px solid gray;
+  max-width: 500px;
+  margin: 1rem auto;
+}
+
+.itemCart img {
+  width: 200px;
+  margin-right: 1rem;
+}
+
+
+
